tests/paczka1/small_fuzzy/79547405.err
Error in line 2: Khimo6HEBY A946 70,4
Error in line 13: A439 A702 80,9
